# forgottenmapeditor

./: .gitignore  .gitmodules  AUTHORS  CHEATSHEET.txt  CMakeLists.txt  CONTRIBUTORS  HACKING.md  LICENSE  README.md  README.pod  README.rdoc  TODO  fmerc.lua  init.lua
data/materials/: .gitignore  README.md
modules/: fmerc.lua  test.otcmap
modules/corelib/: const.lua  inputmessage.lua  keyboard.lua  math.lua  mouse.lua  settings.lua  string.lua  table.lua
modules/lib/: const.lua  functions.lua  lib.otmod
modules/mapeditor/: mapeditor.lua  mapeditor.otmod
modules/mapeditor_clean/: clean.lua  clean.otmod  cleanWindow.otui
modules/mapeditor_containers/: containers.lua  containers.otmod
modules/mapeditor_filebrowser/: filebrowser.lua  filebrowser.otmod  filebrowser.otui
modules/mapeditor_housewindow/: housewindow.lua  housewindow.otmod  housewindow.otui
modules/mapeditor_interface/: interface.lua  interface.otmod  interface.otui  selection.lua  uieditablemap.lua  undo.lua
modules/mapeditor_itembox/: itembox.otmod
modules/mapeditor_itemeditor/: itemeditor.lua  itemeditor.otmod  itemeditor.otui
modules/mapeditor_itempalette/: extraItem.lua  itempalette.lua  itempalette.otmod  itempalette.otui
modules/mapeditor_itempallet/: const.lua  itempallet.lua  itempallet.otmod  itempallet.otui  palletcombobox.lua  uipalletcreature.lua  uipalleteffect.lua  uipalletitem.lua
modules/mapeditor_minimap/: minimap.lua  minimap.otmod  minimap.otui
modules/mapeditor_modulemanager/: modulemanager.lua  modulemanager.otmod
src/: main.cpp
(+50 files in other folders)
